# Design-and-Implementation-of-Login-Dialog-Box

./: CMakeLists.txt  Makefile  README.md  assignment1_ui.pro  debug_login.cpp  logindialog.cpp  logindialog.h  logindialog.ui  logindialog_ui.cpp  logindialog_ui.h  main.cpp  main_ui.cpp  moc_logindialog.cpp  moc_logindialog_ui.cpp  moc_registerdialog.cpp  moc_registerdialog_ui.cpp  registerdialog.cpp  registerdialog.h  registerdialog.ui  registerdialog_ui.cpp  registerdialog_ui.h  test_hash.cpp  ui_logindialog.h  ui_registerdialog.h  userinfo.txt  users.txt
LoginDialog_UI.app/Contents/: Info.plist
LoginDialog_UI.app/Contents/MacOS/: LoginDialog_UI
